--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/Cat4848/result-generator#readme",
   "dependencies": {
-    "typescipt": "^1.0.0"
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
