--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "result-generator",
   "version": "1.0.0",
   "description": "A convenient way to end an operation by either producing an error with an error message or success with a success message.",
-  "main": "dist/src/index.js",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "test": "jest"
