--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A convenient way to end an operation by either producing an error with an error message or success with a success message.",
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "test": "jest"
