--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "result-generator",
   "version": "1.0.5",
   "description": "A convenient way to end an operation by either producing an error with an error message or success with a success message.",
-  "main": "./dist/src/index.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "test": "jest"
+    "test": "jest",
+    "build:webpack": "webpack",
+    "build:tsup": "tsup"
   },
   "repository": {
     "type": "git",
@@ -40,7 +43,12 @@
     "@types/node": "^20.14.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.3",
-    "ts-node": "^10.9.2"
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.2.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "files": [
     "dist",
