--- a/package.json
+++ b/package.json
@@ -43,12 +43,8 @@
     "@types/node": "^20.14.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.3",
-    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsup": "^8.2.3",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0"
+    "tsup": "^8.2.3"
   },
   "files": [
     "dist",
